--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,10 +32,10 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon="res://Resources/Icons/icon.ico"
-application/file_version=""
-application/product_version=""
+application/file_version="1.0"
+application/product_version="1.0"
 application/company_name="Super Awesome Productions"
 application/product_name="Awesome Text Editor"
-application/file_description="Suoer AwesomeTextEditor"
+application/file_description="Well, it edits texts"
 application/copyright=""
 application/trademarks=""
