--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/Something/Awesome Text Editor.exe"
+export_path="../../../Desktop/TextEditor/AwesomeTextEditor_v1.1-release.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -32,8 +32,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon="res://Resources/Icons/icon.ico"
-application/file_version="1.0"
-application/product_version="1.0"
+application/file_version="1.1"
+application/product_version="1.1"
 application/company_name="Super Awesome Productions"
 application/product_name="Awesome Text Editor"
 application/file_description="Well, it edits texts"
