--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -39,3 +39,35 @@ application/product_name="Awesome Text Editor"
 application/file_description="Well, it edits texts"
 application/copyright=""
 application/trademarks=""
+
+[preset.1]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../../Desktop/TextEditor/AwesomeTextEditor_v1.1-release"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name="Awesome Text Editor"
+application/info="Made with Godot Engine"
+application/icon="res://Resources/Icons/icon.png"
+application/identifier=""
+application/signature=""
+application/short_version="1.1"
+application/version="1.1"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description="No camera needed"
+privacy/microphone_usage_description="No microphone needed"
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
