--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 # Godot-specific ignores
 .import/
-scn/
-.import
-default_env.tres
-icon.png
-icon.png.import
-project.godot
+export.cfg
+export_presets.cfg
 
 # Imported translations (automatically generated from CSV files)
 *.translation
